packages/typ/tests/fixtures/diagnostics/0305_fun_recursive_branch_mismatch_07.ml.expected
File "0305_fun_recursive_branch_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0305_fun_recursive_branch_mismatch_07 is not a valid module name.

File "0305_fun_recursive_branch_mismatch_07.ml", line 2, characters 22-27:
2 |   if flag then 6 else false
                          ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
