packages/typ/tests/fixtures/diagnostics/0305_fun_recursive_branch_mismatch_07.ml
let rec choose_eta flag =
  if flag then 6 else false
